# st-mems-rust-drivers

./: .gitmodules  README.md
util/st-fifo-tool/: Cargo.toml  README.md
util/st-fifo-tool/src/: lib.rs  sensor_data.rs
util/st-mem-bank-macro/: Cargo.toml  README.md
util/st-mem-bank-macro/src/: generator.rs  lib.rs  parser.rs
util/st-mem-bank-macro/src/attributes/: adv_register.rs  mem_bank.rs  mod.rs  named_register.rs  register.rs  struct_register.rs
util/st-mems-bus/: Cargo.toml  README.md
util/st-mems-bus/src/: i2c.rs  lib.rs  spi.rs
util/st-mems-reg-config-conv/: CHANGELOG.md  Cargo.toml  README.md  REAMDE.md
util/st-mems-reg-config-conv/include/: st_mems_reg_config_conv.h
util/st-mems-reg-config-conv/src/: lib.rs  parser.rs  ucf_entry.rs
util/st-template/: Cargo.toml  Embed.toml  README.md  build.rs  cargo-generate.toml  defmt.toml  memory.x  pre-script.rhai
util/st-template/examples/: i2c.rs  who_am_i.rs
util/st-template/src/: main.rs
