[package]
name = "st-mems-reg-config-conv"
version = "1.0.2"
edition = "2024"
readme = "README.md"
keywords = ["st", "no-std", "ucf", "json", "embedded"]
categories = ["embedded", "no-std"]
description = "A no_std-compatible library to convert MEMS Configuration Shared Types v2.0 into Rust code at build time."
license = "BSD-3-Clause"
repository = "https://github.com/STMicroelectronics/st-mems-rust-drivers/tree/main/util/st-mems-reg-config-conv"

[lib]
name = "st_mems_reg_config_conv"
crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = []
std = ["dep:serde_json", "dep:serde"]

[dependencies]
serde = {version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true}
